// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snap render completed List -- no border 1`] = `
<view
  class="at-list--no-border at-list"
>
  
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  
</view>
`;

exports[`List Snap render completed List 1`] = `
<view
  class="at-list"
>
  
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <view
          class="item-extra__icon"
        >
          <view
            class="at-icon item-extra__icon-arrow at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--multiple at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <view
            class="item-content__info-note"
          >
            描述信息
          </view>
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--disabled at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            禁用状态
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <view
          class="item-extra__info"
        >
          详细信息
        </view>
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--multiple at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <view
            class="item-content__info-note"
          >
            描述信息
          </view>
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <view
          class="item-extra__icon"
        >
          <view
            class="at-icon item-extra__icon-arrow at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <view
          class="item-extra__info"
        >
          详细信息
        </view>
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <view
          class="item-extra__icon"
        >
          <view
            class="at-icon item-extra__icon-arrow at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--multiple at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字标题文字标题文字标题文字标题文字
          </view>
          <view
            class="item-content__info-note"
          >
            描述信息
          </view>
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <view
          class="item-extra__info"
        >
          详细信息详细信息详细信息详细信息
        </view>
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <view
          class="item-extra__icon"
        >
          <view
            class="at-icon item-extra__icon-arrow at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--thumb at-list__item--multiple at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <view
        class="item-thumb at-list__item-thumb"
      >
        <image
          class="item-thumb__info"
          mode="scaleToFill"
          src="http://img12.360buyimg.com/jdphoto/s72x72_jfs/t10660/330/203667368/1672/801735d7/59c85643N31e68303.png"
        />
      </view>
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <view
            class="item-content__info-note"
          >
            描述信息
          </view>
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <view
          class="item-extra__info"
        >
          详细信息
        </view>
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <view
          class="item-extra__icon"
        >
          <view
            class="at-icon item-extra__icon-arrow at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--thumb at-list__item--multiple at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <view
        class="item-thumb at-list__item-thumb"
      >
        <image
          class="item-thumb__info"
          mode="scaleToFill"
          src="http://img12.360buyimg.com/jdphoto/s72x72_jfs/t10660/330/203667368/1672/801735d7/59c85643N31e68303.png"
        />
      </view>
      <!-- icon -->
      <view
        class="item-icon at-list__item-icon"
      >
        <view
          class="at-icon at-icon-calendar"
          style="color: rgb(120, 164, 250); font-size: 25px;"
        />
      </view>
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <view
            class="item-content__info-note"
          >
            描述信息
          </view>
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <view
          class="item-extra__info"
        >
          详细信息
        </view>
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <!--v-if-->
        <!-- extra icon - arrow -->
        <view
          class="item-extra__icon"
        >
          <view
            class="at-icon item-extra__icon-arrow at-icon-chevron-right"
          />
        </view>
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <view
          class="item-extra__switch"
        >
          <switch
            checked="false"
            color="#6190E8"
            disabled="false"
          />
        </view>
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--disabled at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <view
          class="item-extra__switch"
        >
          <switch
            checked="false"
            color="#6190E8"
            disabled="true"
          />
        </view>
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <view
          class="item-extra__switch"
        >
          <switch
            checked="true"
            color="#6190E8"
            disabled="false"
          />
        </view>
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  <view
    class="at-list__item at-list__item--disabled at-list__item--no-border"
  >
    <view
      class="at-list__item-container"
    >
      <!-- thumb -->
      <!--v-if-->
      <!-- icon -->
      <!--v-if-->
      <!-- content -->
      <view
        class="item-content at-list__item-content"
      >
        <view
          class="item-content__info"
        >
          <view
            class="item-content__info-title"
          >
            标题文字
          </view>
          <!--v-if-->
        </view>
      </view>
      <!-- extra items -->
      <view
        class="item-extra at-list__item-extra"
      >
        <!-- extra text -->
        <!--v-if-->
        <!-- extra image -->
        <!--v-if-->
        <!-- extra switch -->
        <view
          class="item-extra__switch"
        >
          <switch
            checked="true"
            color="#6190E8"
            disabled="true"
          />
        </view>
        <!-- extra icon - arrow -->
        <!--v-if-->
      </view>
    </view>
  </view>
  
</view>
`;
